--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-actionsheet": "^2.4.2",
+    "react-native-dropdown-menu": "^2.0.0",
     "react-native-gesture-handler": "^2.3.2",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-reanimated": "^2.5.0",
     "react-native-safe-area-context": "^4.2.1",
     "react-native-screens": "^3.13.1"
