--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-actionsheet": "^2.4.2",
+    "react-native-animatable": "^1.3.3",
+    "react-native-collapsible": "^1.6.0",
     "react-native-dropdown-menu": "^2.0.0",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-reanimated": "^2.5.0",
