--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "accordion-collapse-react-native": "^1.1.0",
     "react": "17.0.2",
     "react-native": "0.67.3",
+    "react-native-actions-sheet": "^0.6.0",
     "react-native-actionsheet": "^2.4.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-collapsible": "^1.6.0",
     "react-native-dropdown-menu": "^2.0.0",
     "react-native-elements": "^3.4.2",
