--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "react-native-material-dropdown": "^0.11.1",
     "react-native-reanimated": "^2.5.0",
     "react-native-safe-area-context": "^4.2.1",
-    "react-native-screens": "^3.13.1"
+    "react-native-screens": "^3.13.1",
+    "react-redux": "^7.2.8",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "7.17.5",
